--- a/index.html
+++ b/index.html
@@ -1,145 +1,122 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Космический Шутер</title>
+    <title>Color Dash</title>
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-color: #000;
-            overflow: hidden;
             font-family: Arial, sans-serif;
-            color: #fff;
+            background-color: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
         }
 
         #gameContainer {
+            width: 100%;
+            height: 100%;
             position: relative;
-            width: 100vw;
-            height: 100vh;
-            background: radial-gradient(circle, #1e1e1e, #000);
+            background-color: #000;
         }
 
-        #player {
+        #block {
+            width: 50px;
+            height: 50px;
             position: absolute;
             bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 50px;
-            height: 50px;
-            background: url('https://i.imgur.com/OdL0XPt.png') no-repeat center center / contain;
+            left: 20px;
+            background-color: red;
+            border-radius: 5px;
         }
 
-        .bullet {
+        .barrier {
+            width: 60px;
+            height: 100px;
             position: absolute;
-            width: 5px;
-            height: 20px;
-            background-color: #ff0;
-        }
-
-        .enemy {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            background: url('https://i.imgur.com/1aT8Z3G.png') no-repeat center center / contain;
-        }
-
-        #scoreDisplay, #livesDisplay {
-            position: absolute;
-            top: 10px;
-            font-size: 20px;
-            z-index: 1000;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: blue;
         }
 
         #scoreDisplay {
-            left: 20px;
-        }
-
-        #livesDisplay {
-            right: 20px;
-        }
-
-        /* Кнопки для мобильных устройств */
-        #controls {
             position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 20px;
-            z-index: 1000;
-        }
-
-        .control-button {
-            width: 60px;
-            height: 60px;
-            background-color: rgba(255, 255, 255, 0.2);
-            border: none;
-            border-radius: 50%;
+            top: 20px;
+            left: 20px;
+            font-size: 24px;
             color: #fff;
-            font-size: 30px;
-            text-align: center;
-            line-height: 60px;
-        }
-
-        @media (min-width: 768px) {
-            #controls {
-                display: none;
-            }
         }
     </style>
 </head>
 <body>
     <div id="gameContainer">
-        <div id="scoreDisplay">Очки: 0</div>
-        <div id="livesDisplay">Жизни: 3</div>
-        <div id="player"></div>
-        <div id="controls">
-            <button id="leftButton" class="control-button">⬅️</button>
-            <button id="shootButton" class="control-button">🔫</button>
-            <button id="rightButton" class="control-button">➡️</button>
-        </div>
+        <div id="scoreDisplay">Score: 0</div>
+        <div id="block"></div>
     </div>
 
     <script>
         const gameContainer = document.getElementById('gameContainer');
-        const player = document.getElementById('player');
+        const block = document.getElementById('block');
         const scoreDisplay = document.getElementById('scoreDisplay');
-        const livesDisplay = document.getElementById('livesDisplay');
-        const leftButton = document.getElementById('leftButton');
-        const rightButton = document.getElementById('rightButton');
-        const shootButton = document.getElementById('shootButton');
 
         let score = 0;
-        let lives = 3;
-        let playerSpeed = 10;
-        let bullets = [];
-        let enemies = [];
-        let enemyInterval;
-        let gameOver = false;
+        let colors = ['red', 'blue', 'green', 'yellow'];
+        let blockColorIndex = 0;
+        let isGameOver = false;
 
-        // Управление с клавиатуры
-        const keys = {
-            ArrowLeft: false,
-            ArrowRight: false,
-            Space: false
-        };
+        function createBarrier() {
+            if (isGameOver) return;
+
+            const barrier = document.createElement('div');
+            barrier.classList.add('barrier');
+            barrier.style.left = `${gameContainer.clientWidth}px`;
+            barrier.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+            gameContainer.appendChild(barrier);
+
+            let barrierInterval = setInterval(() => {
+                const barrierX = barrier.offsetLeft;
+
+                if (barrierX < -60) {
+                    clearInterval(barrierInterval);
+                    gameContainer.removeChild(barrier);
+                } else {
+                    barrier.style.left = `${barrierX - 5}px`;
+
+                    // Collision detection
+                    if (
+                        barrierX < 70 &&
+                        barrierX > 20 &&
+                        block.style.backgroundColor !== barrier.style.backgroundColor
+                    ) {
+                        alert('Game Over! Final Score: ' + score);
+                        isGameOver = true;
+                        location.reload();
+                    } else if (barrierX < 20) {
+                        score++;
+                        scoreDisplay.innerText = `Score: ${score}`;
+                    }
+                }
+            }, 20);
+        }
+
+        function switchColor() {
+            blockColorIndex = (blockColorIndex + 1) % colors.length;
+            block.style.backgroundColor = colors[blockColorIndex];
+        }
 
         document.addEventListener('keydown', (e) => {
-            if (e.code in keys) {
-                keys[e.code] = true;
+            if (e.code === 'Space' || e.code === 'ArrowUp') {
+                switchColor();
             }
         });
 
-        document.addEventListener('keyup', (e) => {
-            if (e.code in keys) {
-                keys[e.code] = false;
-            }
-        });
+        document.addEventListener('touchstart', switchColor);
 
-        // Управление на мобильных устройствах
-        let mobileLeft = false;
-        let mobileRight = false;
-
-        leftButton.addEventListener('touchstart', (e)
+        setInterval(createBarrier, 1500);
+    </script>
+</body>
+</html>
