--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Dash</title>
+    <title>Falling Blocks</title>
     <style>
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-color: #000;
+            background-color: #222;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -21,26 +21,25 @@
             width: 100%;
             height: 100%;
             position: relative;
-            background-color: #000;
+            background-color: #222;
         }
 
-        #block {
-            width: 50px;
-            height: 50px;
+        #platform {
+            width: 100px;
+            height: 20px;
+            background-color: #fff;
             position: absolute;
             bottom: 20px;
-            left: 20px;
-            background-color: red;
-            border-radius: 5px;
+            left: 50%;
+            transform: translateX(-50%);
         }
 
-        .barrier {
-            width: 60px;
-            height: 100px;
+        .block {
+            width: 20px;
+            height: 20px;
+            background-color: #ff6347;
             position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: blue;
+            top: 0;
         }
 
         #scoreDisplay {
@@ -55,68 +54,81 @@
 <body>
     <div id="gameContainer">
         <div id="scoreDisplay">Score: 0</div>
-        <div id="block"></div>
+        <div id="platform"></div>
     </div>
 
     <script>
         const gameContainer = document.getElementById('gameContainer');
-        const block = document.getElementById('block');
+        const platform = document.getElementById('platform');
         const scoreDisplay = document.getElementById('scoreDisplay');
 
         let score = 0;
-        let colors = ['red', 'blue', 'green', 'yellow'];
-        let blockColorIndex = 0;
         let isGameOver = false;
+        let platformPosition = gameContainer.clientWidth / 2 - 50;
 
-        function createBarrier() {
+        function createBlock() {
             if (isGameOver) return;
 
-            const barrier = document.createElement('div');
-            barrier.classList.add('barrier');
-            barrier.style.left = `${gameContainer.clientWidth}px`;
-            barrier.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
-            gameContainer.appendChild(barrier);
+            const block = document.createElement('div');
+            block.classList.add('block');
+            block.style.left = `${Math.random() * (gameContainer.clientWidth - 20)}px`;
+            gameContainer.appendChild(block);
 
-            let barrierInterval = setInterval(() => {
-                const barrierX = barrier.offsetLeft;
+            let blockInterval = setInterval(() => {
+                const blockY = block.offsetTop;
+                const blockX = block.offsetLeft;
 
-                if (barrierX < -60) {
-                    clearInterval(barrierInterval);
-                    gameContainer.removeChild(barrier);
-                } else {
-                    barrier.style.left = `${barrierX - 5}px`;
-
-                    // Collision detection
-                    if (
-                        barrierX < 70 &&
-                        barrierX > 20 &&
-                        block.style.backgroundColor !== barrier.style.backgroundColor
-                    ) {
+                if (blockY > gameContainer.clientHeight - 40) {
+                    if (blockX > platformPosition && blockX < platformPosition + 100) {
+                        score++;
+                        scoreDisplay.innerText = `Score: ${score}`;
+                        clearInterval(blockInterval);
+                        gameContainer.removeChild(block);
+                    } else {
                         alert('Game Over! Final Score: ' + score);
                         isGameOver = true;
                         location.reload();
-                    } else if (barrierX < 20) {
-                        score++;
-                        scoreDisplay.innerText = `Score: ${score}`;
                     }
+                } else {
+                    block.style.top = `${blockY + 5}px`;
                 }
             }, 20);
         }
 
-        function switchColor() {
-            blockColorIndex = (blockColorIndex + 1) % colors.length;
-            block.style.backgroundColor = colors[blockColorIndex];
+        function movePlatform(direction) {
+            if (direction === 'left' && platformPosition > 0) {
+                platformPosition -= 20;
+            } else if (direction === 'right' && platformPosition < gameContainer.clientWidth - 100) {
+                platformPosition += 20;
+            }
+            platform.style.left = `${platformPosition}px`;
         }
 
         document.addEventListener('keydown', (e) => {
-            if (e.code === 'Space' || e.code === 'ArrowUp') {
-                switchColor();
+            if (e.code === 'ArrowLeft') {
+                movePlatform('left');
+            } else if (e.code === 'ArrowRight') {
+                movePlatform('right');
             }
         });
 
-        document.addEventListener('touchstart', switchColor);
+        let touchStartX = 0;
 
-        setInterval(createBarrier, 1500);
+        document.addEventListener('touchstart', (e) => {
+            touchStartX = e.touches[0].clientX;
+        });
+
+        document.addEventListener('touchmove', (e) => {
+            const touchMoveX = e.touches[0].clientX;
+            if (touchMoveX < touchStartX) {
+                movePlatform('left');
+            } else if (touchMoveX > touchStartX) {
+                movePlatform('right');
+            }
+            touchStartX = touchMoveX;
+        });
+
+        setInterval(createBlock, 1000);
     </script>
 </body>
 </html>
