--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
             height: 100vh;
-            background-color: #f0f0f0;
+            background-color: #f7f7f7;
+            color: #333;
         }
 
         #content {
@@ -21,7 +22,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 24px;
+            font-size: 18px;
             padding: 20px;
             box-sizing: border-box;
             text-align: center;
@@ -30,28 +31,44 @@
         #navbar {
             display: flex;
             justify-content: space-around;
-            background-color: #333;
+            background-color: #ffffff;
             padding: 10px 0;
+            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
         }
 
         .nav-button {
-            color: white;
-            background-color: #444;
+            color: #555;
+            background-color: #ffffff;
             border: none;
             padding: 10px;
             font-size: 16px;
             flex-grow: 1;
             cursor: pointer;
             text-align: center;
+            transition: color 0.3s, background-color 0.3s;
+        }
+
+        .nav-button:hover {
+            background-color: #f0f0f0;
         }
 
         .nav-button:disabled {
-            background-color: #555;
+            color: #bbb;
+            background-color: #f0f0f0;
             cursor: not-allowed;
         }
 
         .nav-button.locked {
-            background-color: #555;
+            position: relative;
+        }
+
+        .nav-button.locked::after {
+            content: '🔒';
+            position: absolute;
+            right: 8px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: #bbb;
         }
 
         .game-container {
@@ -62,11 +79,18 @@
         }
 
         .game-box {
-            width: 100px;
-            height: 100px;
-            background-color: #00aaff;
+            width: 80px;
+            height: 80px;
+            background-color: #0078d7;
             margin-bottom: 20px;
+            border-radius: 12px;
             cursor: pointer;
+            transition: transform 0.3s;
+        }
+
+        .game-message {
+            font-size: 16px;
+            color: #0078d7;
         }
     </style>
 </head>
@@ -79,7 +103,7 @@
         <button class="nav-button" onclick="showTab('tasks')">Задания</button>
         <button class="nav-button" onclick="showTab('game')">Игра</button>
         <button class="nav-button" onclick="showTab('market')">Маркет</button>
-        <button class="nav-button locked" disabled>🔒</button>
+        <button class="nav-button locked" disabled></button>
     </div>
 
     <script>
@@ -93,8 +117,8 @@
             } else if (tab === 'game') {
                 content.innerHTML = `
                     <div class="game-container">
-                        <div class="game-box" onclick="jump()">Нажми меня</div>
-                        <div id="gameMessage">Попробуй попасть в нужное место!</div>
+                        <div class="game-box" onclick="jump()"></div>
+                        <div class="game-message" id="gameMessage">Нажмите на квадрат, чтобы он подпрыгнул!</div>
                     </div>
                 `;
             } else if (tab === 'market') {
@@ -110,6 +134,9 @@
                 document.getElementById('gameMessage').innerText = 'Отлично!';
             }, 300);
         }
+
+        // Initialize the default tab
+        showTab('warehouse');
     </script>
 </body>
 </html>
